[package]
name = "read-write-store"
version = "0.1.0"
authors = ["LlewVallis <llewvallis@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true

[dependencies]
crossbeam-utils = "0.8"

[target.'cfg(not(loom))'.dependencies]
crossbeam-queue = "0.3"
parking_lot = "0.2"

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[dev-dependencies]
rand = "0.8"

[[bench]]
name = "bench"
harness = false
