[package]
name = "read-write-store"
version = "0.1.0"
authors = ["LlewVallis <llewvallis@gmail.com>"]
edition = "2018"
description = """
A concurrent, unordered collection for Rust, where each element has an internally generated ID and a read-write lock.
"""
documentation = "https://github.com/LlewVallis/read-write-store"
readme = "README.md"
homepage = "https://github.com/LlewVallis/read-write-store"
repository = "https://github.com/LlewVallis/read-write-store"
license = "MIT"
keywords = ["atomic", "concurrent", "store"]
categories = ["concurrency", "algorithms", "data-structures"]
include = ["Cargo.toml", "src", "benches", "README.md", "LICENSE"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
crossbeam-utils = "0.8"

[target.'cfg(not(loom))'.dependencies]
crossbeam-queue = "0.3"
parking_lot = "0.2"

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[dev-dependencies]
rand = "0.8"

[[bench]]
name = "bench"
harness = false
